--- a/zone.yaml
+++ b/zone.yaml
@@ -22,7 +22,7 @@
   radius: 100
   icon: mdi:human-greeting
 
-- name: Parents of Philip
+- name: Parents
   latitude: !secret zone_latitude_parents
   longitude: !secret zone_longitude_parents
   radius: 100
