--- a/config/packages/devices/devices.yaml
+++ b/config/packages/devices/devices.yaml
@@ -1,35 +1,15 @@
 ---
-# Package: Celestial
-
-# Automations
-
-automation:
-  - alias: Phone battery low
-    trigger:
-      platform: numeric_state
-      entity_id: sensor.nokia_5_3_battery_level
-      below: 25
-    # action:
-    #   service: notify.telegram
-    #   data_template:
-    #     message: "Phone battery level at {{ sensor.nokia_5_3_battery_level }}%. Put on charge."
-    action:
-      service: notify.mobile_app_nokia_5_3
-      data_template:
-        message: "Phone battery level at {{ sensor.nokia_5_3_battery_level }}%. Put on charge."
-    id: phone_battery_low
+# Package: Devices/Devices
 
 # Binary Sensors
 
-binary_sensor:
+# binary_sensor:
 
-  # Sensors
+# Sensors
 
 sensor:
   # Sensors - Template:
 
-  # device_tracker.nokia_5_3
-  # device_tracker.192_168_1_7_tpgi_com_au
   - platform: template
     sensors:
       chromecast:
