--- a/config/custom_components/average/manifest.json
+++ b/config/custom_components/average/manifest.json
@@ -1,8 +1,15 @@
 {
-  "codeowners": ["@Limych"],
-  "dependencies": [],
-  "documentation": "https://github.com/Limych/ha-average",
-  "domain": "average",
-  "name": "Average",
-  "requirements": []
+    "codeowners": [
+        "@Limych"
+    ],
+    "dependencies": [
+        "history"
+    ],
+    "after_dependencies": [
+        "weather"
+    ],
+    "documentation": "https://github.com/Limych/ha-average",
+    "domain": "average",
+    "name": "Average",
+    "requirements": []
 }
