--- a/config/lovelace/environment.yaml
+++ b/config/lovelace/environment.yaml
@@ -11,6 +11,8 @@ cards:
       sunset: sensor.sunset
       noon: sensor.solar_noon
       moon_phase: sensor.moon
+      time: sensor.utc_time
+      elevation: sun.sun
 
   # - type: weather-forecast
   #   entity: weather.marden
