--- a/config/packages/celestial/celestial.yaml
+++ b/config/packages/celestial/celestial.yaml
@@ -1,14 +1,10 @@
 ---
-# Package: Celestial
+# Package: Celestial/Celestial
 
 # Sun
 # Track the sun
 # https://www.home-assistant.io/integrations/sun/
 sun:
-
-# Sun2
-# https://github.com/pnbruckner/ha-sun2
-sun2:
 
 # Binary Sensors
 
