--- a/config/packages/energy/energy.yaml
+++ b/config/packages/energy/energy.yaml
@@ -49,6 +49,13 @@ homeassistant:
 # Sensors
 
 sensor:
+  # Average
+  # https://github.com/Limych/ha-average
+  - platform: average
+    name: "Average Voltage"
+    entities:
+      - sensor.emoncms2_vrms
+
   # EmonCMS
   # Creates sensors for the feeds available in your local or cloud based version of Emoncms.
   # https://www.home-assistant.io/integrations/emoncms/
